--- a/curso-api/src/main/resources/application.properties
+++ b/curso-api/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+# Spring Data
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/conquer
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
+# Swagger Spring Fox
+springfox.documentation.swagger-ui.base-url=/
+#springfox.documentation.swagger-ui.base-url=${server.servlet.context-path}
+springfox.documentation.swagger.v2.use-model-v3=false
+logging.level.springfox.documentation=ERROR
+
+# Server
+server.port=8080
+server.servlet.context-path=/@project.artifactId@
+
+# App
+app.name=@project.name@
+app.version=@project.version@
+app.description=@project.description@
+app.organization=@project.organization.name@
+app.contextPath=@project.artifactId@
